# ax-boxdemo

./: CMakeLists.txt  LICENSE  README.md  box.conf  run.sh
axmodel/: ax_ax650_hvcfp_algo_model_V1.0.2.axmodel
axmodel/yolo11n_skel/: ax_ax650_hvcfp_algo_model_V1.0.2.axmodel
axmodel/yolov10n_skel/: ax_ax650_hvcfp_algo_model_V1.0.2.axmodel
axmodel/yolov8n_skel/: ax_ax650_hvcfp_algo_model_V1.0.2.axmodel
box_ppl/: CMakeLists.txt
box_ppl/demo/src/: Detector.cpp
box_ppl/src/inference/: detection.hpp  engine_wrapper.cpp
box_ppl/src/inference/detector/: yolox.hpp
box_ppl/src/pipeline/hvcfp/: pipeline_hvcfp.cpp
config/: yolo11n_skel.json  yolov10n_skel.json  yolov8n_skel.json
lib/: libmp4.so.2
onnx/: yolox_n_cut.onnx
